--- a/furniture.html
+++ b/furniture.html
@@ -1,11 +1,134 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/furniture.css">
+  <link rel="stylesheet" href="styles/carousel.css">
+  <link rel="stylesheet" href="styles/menu.css">
+  
 </head>
 <body>
-    <h1>askdojadsifgbs</h1>
-    <p>asdbajdvakd
-        <h3>asdbajsbdljasdbkab</h3>
-    </p>
+  <div class="image-container">
+    <img src="pics/logomenu.png" alt="Pre Logo" id="preImage">
+    <img src="pics/pre_logo.png" alt="Logo" id="mainImage">
+</div>
+<script src="scripts/menu.js"></script>
+<div class="pioption_container">
+  <div class="pioption_item" onclick="showOption(0)">Option 1</div>
+  <div class="pioption_item" onclick="showOption(1)">Option 2</div>
+  <div class="pioption_item" onclick="showOption(2)">Option 3</div>
+  <div class="pioption_item" onclick="showOption(3)">Option 4</div>
+  <div class="pioption_item" onclick="showOption(4)">Option 5</div>
+</div>
+
+<div class="pioption_display">
+  <div class="pioption active">
+    <div class="carousel">
+      <div class="carousel-container">
+        <img src="pics/furniture/1_1.jpg" alt="Image 1" class="carousel-image active">
+        <img src="pics/furniture/1_2.jpg" alt="Image 2" class="carousel-image">
+        <img src="pics/furniture/1_3.JPG" alt="Image 3" class="carousel-image">
+      </div>
+      <div class="carousel-controls">
+        <img src="pics/slider/arrowL.png" alt="Previous" class="arrow" onclick="prevImage()">
+        <img src="pics/slider/arrowR.png" alt="Next" class="arrow" onclick="nextImage()">
+      </div>
+      <div class="carousel-indicators">
+        <span class="indicator active" onclick="goToImage(0)"></span>
+        <span class="indicator" onclick="goToImage(1)"></span>
+        <span class="indicator" onclick="goToImage(2)"></span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="pioption enter-from-bottom">
+    <div class="carousel_1">
+      <div class="carousel-container_1">
+        <img src="pics/furniture/2_1.JPG" alt="Image 4" class="carousel-image_1 active">
+        <img src="pics/furniture/2_2.JPG" alt="Image 5" class="carousel-image_1">
+        <img src="pics/furniture/2_3.JPG" alt="Image 6" class="carousel-image_1">
+      </div>
+      <div class="carousel-controls_1">
+        <img src="pics/slider/arrowL.png" alt="Previous" class="arrow_1" onclick="prevImage_1()">
+        <img src="pics/slider/arrowR.png" alt="Next" class="arrow_1" onclick="nextImage_1()">
+      </div>
+      <div class="carousel-indicators_1">
+        <span class="indicator_1 active" onclick="goToImage_1(0)"></span>
+        <span class="indicator_1" onclick="goToImage_1(1)"></span>
+        <span class="indicator_1" onclick="goToImage_1(2)"></span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="pioption enter-from-bottom">
+    <div class="carousel_2">
+      <div class="carousel-container_2">
+        <img src="pics/furniture/3_1.JPG" alt="Image 7" class="carousel-image_2 active">
+        <img src="pics/furniture/3_2.JPG" alt="Image 8" class="carousel-image_2">
+        <img src="pics/furniture/3_3.JPG" alt="Image 9" class="carousel-image_2">
+      </div>
+      <div class="carousel-controls_2">
+        <img src="pics/slider/arrowL.png" alt="Previous" class="arrow_2" onclick="prevImage_2()">
+        <img src="pics/slider/arrowR.png" alt="Next" class="arrow_2" onclick="nextImage_2()">
+      </div>
+      <div class="carousel-indicators_2">
+        <span class="indicator_2 active" onclick="goToImage_2(0)"></span>
+        <span class="indicator_2" onclick="goToImage_2(1)"></span>
+        <span class="indicator_2" onclick="goToImage_2(2)"></span>
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="pioption enter-from-bottom">
+    <div class="carousel_3">
+      <div class="carousel-container_3">
+        <img src="pics/furniture/4_1.JPG" alt="Image 10" class="carousel-image_3 active">
+        <img src="pics/furniture/4_2.JPG" alt="Image 11" class="carousel-image_3">
+        <img src="pics/furniture/4_3.JPG" alt="Image 12" class="carousel-image_3">
+      </div>
+      <div class="carousel-controls_3">
+        <img src="pics/slider/arrowL.png" alt="Previous" class="arrow_3" onclick="prevImage_3()">
+        <img src="pics/slider/arrowR.png" alt="Next" class="arrow_3" onclick="nextImage_3()">
+      </div>
+      <div class="carousel-indicators_3">
+        <span class="indicator_3 active" onclick="goToImage_3(0)"></span>
+        <span class="indicator_3" onclick="goToImage_3(1)"></span>
+        <span class="indicator_3" onclick="goToImage_3(2)"></span>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="pioption enter-from-bottom">
+    <div class="carousel_4">
+      <div class="carousel-container_4">
+        <img src="pics/furniture/5_1.JPG" alt="Image 13" class="carousel-image_4 active">
+        <img src="pics/furniture/5_2.JPG" alt="Image 14" class="carousel-image_4">
+        <img src="pics/furniture/5_3.JPG" alt="Image 15" class="carousel-image_4">
+      </div>
+      <div class="carousel-controls_4">
+        <img src="pics/slider/arrowL.png" alt="Previous" class="arrow_4" onclick="prevImage_4()">
+        <img src="pics/slider/arrowR.png" alt="Next" class="arrow_4" onclick="nextImage_4()">
+      </div>
+      <div class="carousel-indicators_4">
+        <span class="indicator_4 active" onclick="goToImage_4(0)"></span>
+        <span class="indicator_4" onclick="goToImage_4(1)"></span>
+        <span class="indicator_4" onclick="goToImage_4(2)"></span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="scripts/furniture.js"></script>
+<script src="scripts/furniture_carousel/scripts.js"></script>
+<script src="scripts/furniture_carousel/scripts_1.js"></script>
+<script src="scripts/furniture_carousel/scripts_2.js"></script>
+<script src="scripts/furniture_carousel/scripts_3.js"></script>
+<script src="scripts/furniture_carousel/scripts_4.js"></script>
+
 </body>
 </html>
