--- a/furniture.html
+++ b/furniture.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>СВЭМ</title>
+  <link rel="icon" type="image/x-icon" href="pics/itle.png">
   <link rel="stylesheet" href="styles/furniture.css">
   <link rel="stylesheet" href="styles/carousel.css">
   <link rel="stylesheet" href="styles/menu.css">
