--- a/furniture.html
+++ b/furniture.html
@@ -14,9 +14,11 @@
   <div class="image-container">
     <img src="pics/logomenu.png" alt="Pre Logo" id="preImage">
     <img src="pics/pre_logo.png" alt="Logo" id="mainImage">
-</div>
-<script src="scripts/menu.js"></script>
-<div class="pioption_container">
+  </div>
+  <script src="scripts/menu.js"></script>
+  <div class="pioption_container">
+    <div id="aboba"><img id="aboba2" src="pics/logo.png" alt="">
+    </div>
   <div class="pioption_item" onclick="showOption(0)">Option 1</div>
   <div class="pioption_item" onclick="showOption(1)">Option 2</div>
   <div class="pioption_item" onclick="showOption(2)">Option 3</div>
@@ -27,6 +29,7 @@
 <div class="pioption_display">
   <div class="pioption active">
     <div class="carousel">
+      
       <div class="carousel-container">
         <img src="pics/furniture/1_1.jpg" alt="Image 1" class="carousel-image active">
         <img src="pics/furniture/1_2.jpg" alt="Image 2" class="carousel-image">
@@ -45,7 +48,7 @@
   </div>
 
 
-  <div class="pioption enter-from-bottom">
+  <div class="pioption pioption-hidden">
     <div class="carousel_1">
       <div class="carousel-container_1">
         <img src="pics/furniture/2_1.JPG" alt="Image 4" class="carousel-image_1 active">
@@ -65,7 +68,7 @@
   </div>
 
 
-  <div class="pioption enter-from-bottom">
+  <div class="pioption pioption-hidden">
     <div class="carousel_2">
       <div class="carousel-container_2">
         <img src="pics/furniture/3_1.JPG" alt="Image 7" class="carousel-image_2 active">
@@ -85,7 +88,7 @@
   </div>
 
   
-  <div class="pioption enter-from-bottom">
+  <div class="pioption pioption-hidden">
     <div class="carousel_3">
       <div class="carousel-container_3">
         <img src="pics/furniture/4_1.JPG" alt="Image 10" class="carousel-image_3 active">
@@ -105,12 +108,10 @@
   </div>
 
 
-  <div class="pioption enter-from-bottom">
+  <div class="pioption pioption-hidden">
     <div class="carousel_4">
       <div class="carousel-container_4">
-        <img src="pics/furniture/5_1.JPG" alt="Image 13" class="carousel-image_4 active">
-        <img src="pics/furniture/5_2.JPG" alt="Image 14" class="carousel-image_4">
-        <img src="pics/furniture/5_3.JPG" alt="Image 15" class="carousel-image_4">
+      
       </div>
       <div class="carousel-controls_4">
         <img src="pics/slider/arrowL.png" alt="Previous" class="arrow_4" onclick="prevImage_4()">
